src/app/components/taskbar/taskbar.module.css
/* Taskbar Start */
.taskbar {
  display: grid;

  grid-template:
    [row1-start] "a b c d e" 5vh [row1-end]
    / 2.5vh 150px 2.5vh 1fr 0.075fr;

  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 5vh;
  z-index: 100;
  user-select: none;
}
/* Taskbar End */

/* Taskbar Line Start */
.taskbarLine {
  grid-area: a / c / a / d;
  background: rgb(36, 93, 219);
  background: linear-gradient(
    180deg,
    rgba(36, 93, 219, 1) 0%,
    rgba(70, 144, 230, 1) 4%,
    rgba(32, 87, 215, 1) 16%,
    rgba(36, 93, 219, 1) 49%,
    rgba(38, 99, 224, 1) 91%,
    rgba(25, 64, 165, 1) 96%
  );
  z-index: 1;

  display: flex;
  align-items: center;
  padding-left: 2.5vh;
}
.smallAppIconContainer {
  display: flex;
  height: 100%;
  width: fit-content;
  align-items: center;
  margin: 0 25px 0 10px;
}
.largeAppIconContainer {
  display: flex;
  height: 100%;
  width: fit-content;
  align-items: center;
}
/* Taskbar Line End */

/* SysTray Start */
.sysTray {
  grid-area: a / e / a / e;
  background: rgb(18, 144, 233);
  background: linear-gradient(
    180deg,
    rgba(18, 144, 233, 1) 0%,
    rgba(24, 184, 243, 1) 4%,
    rgba(18, 144, 233, 1) 16%,
    rgba(12, 141, 234, 1) 49%,
    rgba(13, 161, 242, 1) 91%,
    rgba(17, 115, 212, 1) 96%
  );
  z-index: 2;
  box-shadow: inset 10px 0 2px -6.5px #18b8f3, -1px 0px 2px black;

  display: flex;
  align-items: center;
  justify-content: center;
  min-width: max-content;
}
.timeLabel {
  color: #f0f8fe;
  font-size: 0.9vw;
}
/* SysTray Start */

/* Large App Icon Start */
/* Only do styling of open icon here, sizing and positioning in tsx. Not working doing it here */
.largeAppIconShared {
  position: relative;
  width: 200px;
  height: 80%;
  margin-right: 3px;
  display: flex;
  align-items: center;
}
.largeAppIconMinimized {
  background: rgb(19, 135, 247);
  background: linear-gradient(
    180deg,
    rgba(19, 135, 247, 1) 0%,
    rgba(43, 146, 250, 1) 4%,
    rgba(51, 118, 238, 1) 16%,
    rgba(19, 135, 247, 1) 49%,
    rgba(19, 135, 247, 1) 91%,
    rgba(2, 79, 181, 1) 96%
  );
  box-shadow: 0px 2px 2px rgba(2, 79, 181, 1), 0px -1px 2px rgba(2, 79, 181, 1),
    inset 1px 0px 2px 1px #4699f9;
  border-radius: 3px;
}
.largeAppIconMinimized:hover {
  background: rgb(19, 135, 247);
  background: linear-gradient(
    180deg,
    rgba(19, 135, 247, 1) 0%,
    rgba(122, 184, 252, 1) 4%,
    rgba(83, 160, 255, 1) 16%,
    rgba(83, 160, 255, 1) 49%,
    rgba(83, 160, 255, 1) 91%,
    rgba(63, 132, 254, 1) 96%
  );
  box-shadow: 0px 2px 2px rgba(2, 79, 181, 1), 0px -1px 2px rgba(2, 79, 181, 1),
    inset 1px 0px 2px 1px #4699f9;
  border-radius: 3px;
}
.largeAppIconOpen {
  background: #1a50b8;
  box-shadow: 0px 2px 2px rgba(2, 79, 181, 1), 0px -1px 2px rgba(2, 79, 181),
    inset 1px 1px 2px 1.5px #0f3788, inset -1px -1px 1px 0.5px #0f3788;
  border-radius: 3px;
}
.largeAppIconOpen:hover {
  background: #0558db;
  box-shadow: 0px 2px 2px rgba(2, 79, 181, 1), 0px -1px 2px rgba(2, 79, 181),
    inset 1px 1px 2px 1.5px #0f3788, inset -1px -1px 1px 0.5px #0f3788;
  border-radius: 3px;
}
.largeAppIconClosed {
  height: 0;
  width: 0;
  overflow: hidden;
}
.largeAppIconImage {
  width: auto;
  height: 80%;
  filter: drop-shadow(0px 1px 2px #143384);
  margin: 0 0 0 5%;
}
.largeAppIconLabel {
  color: #f0f8fe;
  font-size: 85%;
  margin: 0 0 0 5%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
/* Large App Icon End */

/* Small App Icon Start */
.smallAppIcon {
  position: relative;
  aspect-ratio: 1 / 1;
  height: 80%;
  max-width: 80%;
  max-height: 80%;

  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 3px 0 3px;
}
.smallAppIcon:hover {
  position: relative;
  aspect-ratio: 1 / 1;
  height: 80%;

  background-color: #2c80f5;
  box-shadow: 1px 2px 2px 1.25px rgba(2, 79, 181, 1),
    inset -1px -2px 0.65px 0.5px rgba(2, 79, 181, 1),
    inset 2px 1px 2px 1px #4699f9;
  border-radius: 3px;

  display: flex;
  align-items: center;
  justify-content: center;
}
.smallAppIconImage {
  width: auto;
  height: 3.5vh;
  filter: drop-shadow(0px 1px 3px #1940a6);
}
/* Small App Icon End */

/* Start Button Start*/
.startBackSection {
  grid-area: a / a / a / a;
  background: url(/start/startBack.svg);
  background-size: cover;
  height: 102%;
  z-index: 2;
}
.startBackSectionHover {
  grid-area: a / a / a / a;
  background: url(/start/startBack.svg);
  background-size: cover;
  height: 102%;
  z-index: 2;
  filter: brightness(110%);
}
.startBackSectionOpen {
  grid-area: a / a / a / a;
  background: url(/start/startBackOpen.svg);
  background-size: cover;
  height: 102%;
  z-index: 2;
}
.startBackSectionHoverOpen {
  grid-area: a / a / a / a;
  background: url(/start/startBackOpen.svg);
  background-size: cover;
  height: 102%;
  z-index: 2;
  filter: brightness(130%);
}

.startMiddleSection {
  grid-area: a / b / a / b;
  background: url(/start/startMiddle.svg);
  background-size: auto 100%;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: -1px;
}
.startMiddleSectionHover {
  grid-area: a / b / a / b;
  background: url(/start/startMiddle.svg);
  background-size: auto 100%;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: -1px;
  filter: brightness(110%);
}
.startMiddleSectionOpen {
  grid-area: a / b / a / b;
  background: url(/start/startMiddleOpen.svg);
  background-size: auto 100%;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: -1px;
}
.startMiddleSectionHoverOpen {
  grid-area: a / b / a / b;
  background: url(/start/startMiddleOpen.svg);
  background-size: auto 100%;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: -1px;
  filter: brightness(130%);
}
@media screen and (min-width: 0px),
  screen and (min--moz-device-pixel-ratio: 0) {
  .startMiddleSection {
    border-bottom: green solid 1px;
    box-sizing: border-box;
  }
  .startMiddleSectionHover {
    border-bottom: green solid 1px;
    box-sizing: border-box;
  }
  .startMiddleSectionOpen {
    border-bottom: #16531a solid 1px;
    box-sizing: border-box;
  }
  .startMiddleSectionHoverOpen {
    border-bottom: #16531a solid 1px;
    box-sizing: border-box;
  }
}

.startEndSection {
  grid-area: a / c / a / c;
  background: url(/start/startEnd.svg);
  background-size: cover;
  z-index: 2;
  filter: drop-shadow(3px 0 1.5px #2c79db);
  clip-path: inset(0px -5px 0px 0px);
}
.startEndSectionHover {
  grid-area: a / c / a / c;
  background: url(/start/startEnd.svg);
  background-size: cover;
  z-index: 2;
  filter: drop-shadow(3px 0 1.5px #2c79db) brightness(110%);
  clip-path: inset(0px -5px 0px 0px);
}
.startEndSectionOpen {
  grid-area: a / c / a / c;
  background: url(/start/startEndOpen.svg);
  background-size: cover;
  z-index: 2;
  filter: drop-shadow(3px 0 1.5px #2c79db);
  clip-path: inset(0px -5px 0px 0px);
}
.startEndSectionHoverOpen {
  grid-area: a / c / a / c;
  background: url(/start/startEndOpen.svg);
  background-size: cover;
  z-index: 2;
  filter: drop-shadow(3px 0 1.5px #2c79db) brightness(130%);
  clip-path: inset(0px -5px 0px 0px);
}

.startLabel {
  font-style: italic;
  margin-right: 10px;
  color: #fdfdfd;
  text-shadow: 1px 1.5px 5px #000000;
  font-size: 130%;
}
.startWindowsXPIcon {
  height: 60%;
  filter: drop-shadow(2px 2px 3px);
  align-content: flex-start;
  margin-right: 10px;
}
/* Start Button End*/

